--- a/index.html
+++ b/index.html
@@ -1,12 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>prova</title>
+<link rel="stylesheet" type="text/css" href="estilo.css"/>
 </head>
 <body>
-    
+    <div class="box-parent-login">
+        <fieldset>
+        <h1>LOGIN</h1>
+        <form>
+            <input type="text"  placeholder="digite seu e-mail" id="e-mail">
+            <input type="password" placeholder="digite sua senha " id="senha"><br><br>
+            <input type="submit" onclick="logar(); return false">
+        </form>
+    </fieldset>
+    </div>
+    <script>
+        function logar(){
+          var LOGIN = document.getElementById('e-mail').value;
+          var senha = document.getElementById('senha').value;
+          if(LOGIN == "psAres" && senha == "pica"){
+
+            alert ("parabens filho da puta")
+            location.href ="inicio.html"
+        }else{
+            alert ("se fudeu")
+        }
+    }
+    </script>
 </body>
 </html>
