--- a/inicio.html
+++ b/inicio.html
@@ -5,6 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mc Divertida</title>
+    <style>
+        h1{
+            font-family: Arial;
+        }
+        p{
+            font-family: Arial;
+        }
+    </style>
 </head>
 <body>
    <h1>quem é a lenda ?</h1> 
@@ -22,6 +30,6 @@
     LIGAÇÕES
     Ela e Luluca são YouTubers brasileiras jovens conhecida por vídeos de comédia para toda a família.</p>
 
-    <img src="https://th.bing.com/th/id/OIP.wPlKqWi3DIUjNf_YphMvpQHaE8?pid=ImgDet&rs=1" alt="">
+    <img src="https://th.bing.com/th/id/OIP.wPlKqWi3DIUjNf_YphMvpQHaE8?pid=ImgDet&rs=1" alt="Mc Divertida" height="60%" width="100%">
 </body>
 </html>
