--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
         function logar(){
           var LOGIN = document.getElementById('e-mail').value;
           var senha = document.getElementById('senha').value;
-          if(LOGIN == "psAres" && senha == "pica"){
+          if(LOGIN == "@psAres" && senha == "1q2w3e4r"){
 
-            alert ("parabens filho da puta")
+            alert ("login feito com sucesso")
             location.href ="inicio.html"
         }else{
-            alert ("se fudeu")
+            alert ("tente novamente")
         }
     }
     </script>
